--- a/website.html
+++ b/website.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>styple - My First Heading</h1>
 
-<p>My first paragraph.</p>
+<p>sth - My first paragraph.</p>
 
 </body>
 </html>
